src/test/ui/wf/wf-object-safe.stderr
error[E0038]: the trait `A` cannot be made into an object
  --> $DIR/wf-object-safe.rs:9:13
   |
LL | trait A {
   |       - this trait cannot be made into an object...
LL |     fn foo(&self, _x: &Self);
   |                       ----- ...because method `foo` references the `Self` type in this parameter
...
LL |     let _x: &dyn A;
   |             ^^^^^^ the trait `A` cannot be made into an object
   |
   = help: consider moving `foo` to another trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
